<resources>
    <string name="app_name">KhwaKhanyaWelfare</string>
    <string name="create_account_txt">Create Account</string>
    <string name="sign_up_txt">Sign up</string>
    <string name="your_username_txt">Your username</string>
    <string name="your_email_txt">Your email</string>
    <string name="your_password_txt">Your password</string>
    <string name="confirm_password_txt">Confirm password</string>
    <string name="username_txt">Username</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="already_have_an_account_txt">Already have an account?</string>
    <string name="log_in_txt">Log In</string>
    <string name="sign_in_txt">Sign In</string>
    <string name="don_t_have_an_account_txt">Don\'t have an account?</string>
    <string name="forgot_password_txt">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="exit_app">Exit App?</string>
    <string name="exit_the_app">Would you like to exit the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_enter_a_password">Please enter a password</string>
    <string name="please_enter_an_email">Please enter an email</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="donor">Donor</string>
    <string name="create_profile">Create Profile</string>
    <string name="name">Name</string>
    <string name="continue_btn_text">Continue</string>
    <string name="khwakhanya_welfare">Khwakhanya Welfare</string>
    <string name="beneficiaries">Beneficiaries</string>
    <string name="home">Home</string>
    <string name="donation_history">Donation History</string>
    <string name="this_beneficiary_needs">This beneficiary needs a</string>
    <string name="school">School</string>
    <string name="monetary">Monetary</string>
    <string name="donation">donation</string>
    <string name="your_age">Your Age</string>
    <string name="age">Age</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_full_name">Your full name</string>
    <string name="your_school">Your School</string>
    <string name="a_few_more_details">A few more details</string>
    <string name="what_do_you_need_assistance_with">What do you need assistance with?</string>
    <string name="are_you_a_donor_or_a_beneficiary">Are you a Donor or a Beneficiary?</string>
    <string name="all_done_lets_go">All done, lets go change the world</string>
    <string name="name_colon">Name:</string>
    <string name="age_colon">Age:</string>
    <string name="school_colon">School:</string>
    <string name="donation_plea_text">Your support can make a difference! By donating today, you’ll help us continue our mission to provide essential resources and make a positive impact in our community. Every contribution, no matter the size, brings us closer to creating lasting change. Join us in making a difference—donate now and be a part of something meaningful!</string>
    <string name="make_a_donation">Make a donation</string>
    <string name="what_would_you_like_to_donate">What would you like to donate?</string>
    <string-array name="donation_types">
        <item>MONETARY</item>
        <item>FOOD</item>
        <item>TIME</item>
        <item>CLOTHING</item>
    </string-array>
</resources>