<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.registration.RegistrationFragment">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:id="@+id/create_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_txt"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_txt"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/username_edit_text"
        app:layout_constraintStart_toStartOf="parent"
         />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="25sp"
        android:hint="@string/your_username_txt"
        android:autofillHints="username"
        app:layout_constraintTop_toBottomOf="@+id/create_account_title"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_txt"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/email_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="25sp"
        android:hint="@string/your_email_txt"
        android:autofillHints="emailAddress"
        app:layout_constraintTop_toBottomOf="@+id/username_edit_text"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_txt"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/password_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="25sp"
        android:autofillHints="password"
        android:hint="@string/your_password_txt"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled ="true"
        />
    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:id="@+id/confirm_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password_txt"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/password_confirm_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_confirm_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="25sp"
        android:autofillHints="password"
        android:hint="@string/confirm_password_txt"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled ="true"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn"
        app:layout_constraintTop_toBottomOf="@+id/password_confirm_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:text="@string/sign_up_txt"
        />
    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:id="@+id/existing_account_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_txt"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_txt"
        android:textSize="12sp"
        android:textStyle="bold"
        android:focusable="true"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        android:autoLink="all"
        app:layout_constraintStart_toEndOf="@+id/existing_account_label"
        />

</androidx.constraintlayout.widget.ConstraintLayout>