<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="5dp"
    app:cardCornerRadius="16dp"
    app:cardMaxElevation="5dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <com.google.android.material.imageview.ShapeableImageView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:id="@+id/imageview"
            android:layout_width="40dp"
            android:src="@drawable/ic_beneficiary"
            android:layout_height="40dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bill_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@id/imageview"
            app:layout_constraintTop_toTopOf="parent"

            android:text="@string/beneficiary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bill_name_txt"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/school_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_txt"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/need_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/school_txt"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/this_beneficiary_needs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/need_txt"
            app:layout_constraintStart_toEndOf="@+id/need_label"
            app:layout_constraintTop_toBottomOf="@+id/school_txt"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:text="@string/monetary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/donation_label"
            app:layout_constraintStart_toEndOf="@+id/need_txt"
            app:layout_constraintTop_toBottomOf="@+id/school_txt"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/donation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            />











    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>