<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.onboarding.profile.CreateProfileFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="2dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:id="@+id/create_account_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_profile"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="120dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/name_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="25sp"
                android:hint="@string/your_full_name"
                android:autofillHints="emailAddress"
                app:layout_constraintTop_toBottomOf="@+id/create_account_title"
                android:layout_marginTop="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:id="@+id/password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/phone_number_edittext"
                app:layout_constraintStart_toStartOf="parent"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_edittext"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="25sp"
                android:autofillHints="phone"
                android:hint="@string/your_phone_number"
                app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
                android:layout_marginTop="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:visibility="visible"
                android:id="@+id/age_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/age_edittext"
                app:layout_constraintStart_toStartOf="parent"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/age_edittext"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="25sp"
                android:autofillHints="phone"
                android:hint="@string/your_age"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_edittext"
                android:layout_marginTop="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/continue_btn"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_edittext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="235dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="25sp"
                android:text="@string/continue_btn_text"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>