<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.resetpassword.ResetPasswordFragment">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:text="@string/back"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:focusable="true"
        />


    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:id="@+id/reset_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_txt"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/email_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="25sp"
        android:hint="@string/your_email_txt"
        android:autofillHints="emailAddress"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_title"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="47dp"
        android:textSize="25sp"
        android:text="@string/reset_password"
        />

</androidx.constraintlayout.widget.ConstraintLayout>