<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme"
    tools:context=".presentation.onboarding.beneficiary_details.BeneficiaryDetailsFragment">
    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:id="@+id/create_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_few_more_details"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/school_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/school_edit_text"
        android:lines="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/your_school"
        android:autofillHints="emailAddress"
        app:layout_constraintTop_toBottomOf="@+id/create_account_title"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_need_assistance_with"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/need_select"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@+id/school_edit_text"
        android:id="@+id/need_select"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.MaterialAutoCompleteTextView

            app:layout_constraintTop_toBottomOf="@+id/school_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/need_select_choice"
            android:layout_weight="1"
            android:text="Choose a need"
            android:layout_width="match_parent"
            android:inputType="none"
            android:layout_height="50dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_btn"
        app:layout_constraintTop_toBottomOf="@+id/need_select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="235dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="25sp"
        android:text="@string/continue_btn_text"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>